:heavy_check_mark: Сборка #8

--- a/8/css/style.css
+++ b/8/css/style.css
@@ -74,7 +74,11 @@ body {
   --black2: #111111;
   --black3: #222222;
   --grey1: #f2f2f2;
-  --grey2: #EAEAEA;
+  --grey2: #eaeaea;
+  --grey3: #cdcdcd;
+  --grey4: #bababa;
+  --grey5: #d9d9d9;
+  --grey6: #e7e7e7;
   --default-white: #ffffff;
   --background-page: #e5e5e5;
   --green1: rgba(104, 183, 56, 0.85);
@@ -1245,6 +1249,55 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 var(--mobile-padding);
+}
+.main-footer .main-footer__logo {
+  padding-top: 39px;
+  width: 100%;
+  min-height: 95px;
+  position: relative;
+  text-align: center;
+}
+.main-footer .main-footer__logo::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: var(--grey5);
+  bottom: 0;
+  left: 0;
+}
+.main-footer .main-footer__references {
+  display: flex;
+  justify-content: space-between;
+  min-height: 78px;
+  width: 100%;
+  align-items: center;
+  position: relative;
+}
+.main-footer .main-footer__references::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: var(--grey5);
+  top: 0;
+  left: 0;
+}
+.main-footer .main-footer__contacts {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  min-height: 63px;
+  width: 132px;
+  align-items: center;
+}
+.main-footer .main-footer__contacts .contacts__vk {
+  margin-right: 24px;
+}
+.main-footer .main-footer__contacts .contacts__youtube {
+  margin-right: 24px;
 }
 @media (min-width: 768px) {
   .main-footer {
@@ -1252,8 +1305,13 @@ body {
     padding: 0 var(--tablet-padding);
   }
   .main-footer .main-footer__logo {
+    width: 128px;
     margin: 0;
     margin-right: 155px;
+    text-align: left;
+  }
+  .main-footer .main-footer__logo::after {
+    content: none;
   }
   .main-footer .main-footer__contacts {
     margin: 0;
@@ -1261,6 +1319,9 @@ body {
   }
   .main-footer .main-footer__references {
     width: 163px;
+  }
+  .main-footer .main-footer__references::after {
+    content: none;
   }
 }
 @media (min-width: 1440px) {
@@ -1275,36 +1336,6 @@ body {
     margin: 0;
     margin-right: auto;
   }
-}
-
-.footer-logo {
-  padding-top: 39px;
-  margin: 0 auto;
-  min-height: 95px;
-}
-
-.contacts {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  min-height: 63px;
-  width: 132px;
-  align-items: center;
-}
-.contacts .contacts__vk {
-  margin-right: 24px;
-}
-.contacts .youtube-link {
-  margin-right: 24px;
-}
-
-.footer-references {
-  display: flex;
-  justify-content: space-between;
-  min-height: 78px;
-  width: 281px;
-  align-items: center;
 }
 
 .main-footer-grey {
@@ -1795,6 +1826,7 @@ body {
   padding-top: 27px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 32px;
 }
 .questionnaire .questionnaire__title {
   margin: 0;
@@ -1854,6 +1886,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    column-gap: 80px;
   }
 }
 
@@ -1869,31 +1902,37 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   row-gap: 13px;
   color: var(--black1);
   padding-bottom: 24px;
 }
+.form .form__characteristics-input {
+  border: none;
+  outline: 2px solid var(--grey6);
+}
 .form .form__name {
   justify-self: end;
-  min-width: 230px;
+  width: 81.7857142857%;
   min-height: 45px;
 }
 .form .form__weight {
   justify-self: end;
-  min-width: 204px;
+  width: 72.8571428571%;
   min-height: 45px;
 }
 .form .form__age {
   justify-self: end;
-  min-width: 172px;
+  width: 61.4285714286%;
   min-height: 45px;
 }
 .form .form__goal {
   margin: 0;
   padding: 0;
-  min-width: 320px;
+  width: 100%;
   min-height: 157px;
   padding-top: 22px;
   padding-bottom: 19px;
@@ -1901,81 +1940,240 @@ body {
 }
 .form .form__goal-wrapper {
   display: grid;
-  grid-template-columns: auto 1fr;
-  row-gap: 13px;
-  min-width: 277px;
-  min-height: 115px;
+  font-size: 16px;
+  line-height: 18px;
+  row-gap: 26px;
+  width: 100%;
+  justify-content: start;
+  padding-left: 45px;
+}
+.form .form__radio-label {
+  position: relative;
+}
+.form .form__radio-label:hover .radio {
+  box-shadow: 0 0 0 1px var(--grey4);
+}
+.form .form__radio-label:disabled .radio {
+  opacity: 0.3;
+}
+.form .form__radio {
+  position: absolute;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+.form .form__radio:checked + .radio {
+  background-image: url("data:image/svg+xml,%3Csvg width='14' height='15' viewBox='0 0 14 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cellipse cx='7' cy='7.27' rx='6.75' ry='6.77' fill='%2368B738'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.form .radio {
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border-radius: 50%;
+  top: -7.5px;
+  left: -45px;
+  box-shadow: 0 0 0 1px var(--grey3) inset;
 }
 .form .form__contacts {
+  position: relative;
   margin: 0;
   padding: 0;
   width: 100%;
   padding-top: 26px;
-  padding-bottom: 23px;
+}
+.form .form__contacts::after {
+  content: "";
+  position: absolute;
+  width: 99px;
+  height: 2px;
+  background-color: var(--green2);
+  top: 44px;
+  right: -20px;
 }
 .form .form__contacts-title {
-  display: block;
+  margin: 0;
   width: 100%;
+  font-weight: 400;
   font-size: 24px;
   line-height: 26px;
+  text-transform: none;
   color: var(--default-black);
   margin-bottom: 35px;
 }
-.form .form__email-text {
+.form .form__contacts-content {
   display: flex;
-  align-items: center;
-  width: 100%;
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
-  color: var(--black1);
-  margin-bottom: 14px;
+  flex-direction: column;
+  row-gap: 14px;
+  flex-wrap: wrap;
 }
-.form .form__tel-text {
+.form .form__contacts-input {
+  position: relative;
+}
+.form .form__contacts-input::after {
+  content: "";
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 19px;
+  height: 13px;
+  right: 0;
+  left: auto;
+  top: 0;
+}
+.form .form__contacts-text {
   display: flex;
   align-items: center;
-  width: 100%;
+  justify-content: space-between;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
   color: var(--black1);
+}
+.form .form__email {
+  font-size: 16px;
+  line-height: 18px;
+  padding-left: 15px;
+  padding-right: 50px;
+  text-transform: uppercase;
+  width: 78.2142857143%;
+  min-height: 45px;
+}
+.form .form__email::after {
+  background-image: url("data:image/svg+xml,%3Csvg width='19' height='14' viewBox='0 0 19 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23222' stroke-width='1.3' d='M.65 5.848v8M17.65 5.848v8M0 13.198h18M0 1.198h18M17.35 3.03 9 9.524.65 3.03V1.498h16.7V3.03Z'/%3E%3C/svg%3E");
+}
+.form .form__tel {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  width: 72.8571428571%;
+  min-height: 45px;
+}
+.form .form__tel::after {
+  background-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)' fill='%23000'%3E%3Cpath d='M17.9 9.753H9.4v1.204h8.5l-2.1 2.107.9.903 3.1-3.11a.754.754 0 0 0 0-.904l-3.1-3.11-.9.903 2.1 2.007ZM8.1 19.787v-6.221a.653.653 0 0 0-.6-.602H3.1a1.226 1.226 0 0 0 1.2 1.204h2.5v5.017H3.1a1.784 1.784 0 0 1-1.728-1.02 1.801 1.801 0 0 1-.172-.686V3.431a1.78 1.78 0 0 1 .483-1.25A1.767 1.767 0 0 1 2.9 1.624h3.9v5.017H4.4a1.218 1.218 0 0 0-1.2 1.204h4.4a.649.649 0 0 0 .6-.602V.923A.863.863 0 0 0 7.5.32H3.1a2.99 2.99 0 0 0-2.151.81A3.01 3.01 0 0 0 0 3.23v13.948a2.91 2.91 0 0 0 .772 2.192 2.89 2.89 0 0 0 2.128.919h4.6a.499.499 0 0 0 .6-.502Z'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' transform='translate(0 .32)' d='M0 0h20v20.069H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
 }
 .form .form__comments {
+  position: relative;
   margin: 0;
   padding: 0;
   width: 100%;
-  padding-bottom: 23px;
+  padding-top: 23.5px;
+}
+.form .form__comments::after {
+  content: "";
+  position: absolute;
+  width: 158px;
+  height: 2px;
+  background-color: var(--green2);
+  top: 40px;
+  right: -20px;
 }
 .form .form__comments-title {
+  font-weight: 400;
+  text-transform: none;
   font-size: 24px;
   line-height: 26px;
   color: var(--default-black);
+  margin: 0;
   margin-bottom: 37px;
 }
 .form .form__comments-text {
   width: 100%;
   min-height: 150px;
-}
-.form .form__additional {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-.form .form__additional-title {
   font-size: 24px;
   line-height: 26px;
   color: var(--default-black);
+}
+.form .form__additional {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  padding-top: 23px;
+}
+.form .form__additional::after {
+  content: "";
+  position: absolute;
+  width: 136px;
+  height: 2px;
+  background-color: var(--green2);
+  top: 40px;
+  right: -20px;
+}
+.form .form__additional-title {
+  text-align: left;
+  font-size: 24px;
+  line-height: 26px;
+  font-weight: 400;
+  color: var(--default-black);
+  margin: 0;
   margin-bottom: 34px;
+  text-transform: none;
 }
 .form .form__additional-wrapper {
   width: 100%;
   display: grid;
-  row-gap: 13px;
+  row-gap: 26px;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
   color: var(--default-black);
+  padding-left: 45px;
   margin-bottom: 34px;
+}
+.form .form__checkbox-label {
+  position: relative;
+}
+.form .form__checkbox-label:hover .checkbox {
+  box-shadow: 0 0 0 1px var(--grey4);
+}
+.form .form__checkbox-label:disabled .checkbox {
+  opacity: 0.3;
+}
+.form .form__checkbox {
+  position: absolute;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+.form .form__checkbox:checked + .checkbox {
+  background-image: url("data:image/svg+xml,%3Csvg width='19' height='15' viewBox='0 0 19 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 11.718 1.3 5.27.25 6.457 7 14.094 18.25 1.366 17.2.094 7 11.718Z' fill='%2368B738'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.form .checkbox {
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  top: -8px;
+  left: -45px;
+  box-shadow: 0 0 0 1px var(--grey3);
+}
+.form .form__submit-button {
+  width: 100%;
+  text-align: center;
+}
+.form .form__button {
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  border: none;
+  min-height: 40px;
+  width: 100%;
+  margin-bottom: 21px;
+}
+.form .form__note {
+  text-transform: none;
+  margin: 0;
 }
 @media (min-width: 768px) {
   .form .form__characteristics {
@@ -1995,8 +2193,6 @@ body {
   .form .form__name {
     width: 567px;
     min-height: 52px;
-    border: none;
-    outline: 2px solid var(--black1);
   }
   .form .form__weight-text {
     width: 84px;
@@ -2005,8 +2201,6 @@ body {
   .form .form__weight {
     width: 536px;
     min-height: 52px;
-    border: none;
-    outline: 2px solid var(--black1);
   }
   .form .form__age-text {
     width: 120px;
@@ -2015,40 +2209,60 @@ body {
   .form .form__age {
     width: 497px;
     min-height: 52px;
-    border: none;
-    outline: 2px solid var(--black1);
   }
   .form .form__goal {
     padding: 0;
     font-size: 20px;
     line-height: 30px;
-    padding-top: 25px;
+    padding-top: 36px;
     padding-left: 27px;
-    padding-bottom: 25px;
+    padding-bottom: 36px;
     border: none;
-    outline: 2px solid var(--black1);
-    width: 100%;
+    outline: 2px solid var(--grey6);
     color: var(--black3);
     margin-bottom: 75px;
   }
   .form .form__goal-wrapper {
+    padding-left: 87px;
     align-items: center;
     column-gap: 20px;
-    row-gap: 13px;
-    padding-bottom: 25px;
+    row-gap: 26px;
+  }
+  .form .radio {
+    width: 40px;
+    height: 40px;
+    top: -12.5px;
+    left: -60px;
+    box-shadow: 0 0 0 1px var(--grey3) inset;
   }
   .form .form__contacts {
     font-size: 20px;
     line-height: 30px;
     padding: 0;
-    margin-bottom: 65px;
+  }
+  .form .form__contacts::after {
+    width: 145px;
+    right: -65px;
+    top: 24px;
+  }
+  .form .form__contacts::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: var(--green2);
+    left: -70px;
+    top: 24px;
   }
   .form .form__contacts-title {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
     color: var(--default-black);
-    text-transform: lowercase;
+    text-transform: none;
+  }
+  .form .form__contacts-content {
+    row-gap: 20px;
   }
   .form .form__email-text {
     justify-content: space-between;
@@ -2070,20 +2284,49 @@ body {
   }
   .form .form__comments {
     padding: 0;
-    margin-bottom: 65px;
+    padding-top: 65px;
+  }
+  .form .form__comments::after {
+    width: 145px;
+    right: -65px;
+    top: 89px;
+  }
+  .form .form__comments::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: var(--green2);
+    left: -70px;
+    top: 89px;
   }
   .form .form__comments-title {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
-    text-transform: lowercase;
+    text-transform: none;
   }
   .form .form__comments-text {
     width: 100%;
     min-height: 174px;
   }
   .form .form__additional {
-    margin-bottom: 54px;
+    padding-top: 65px;
+    padding-bottom: 54px;
+  }
+  .form .form__additional::after {
+    width: 145px;
+    right: -65px;
+    top: 89px;
+  }
+  .form .form__additional::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: var(--green2);
+    left: -70px;
+    top: 89px;
   }
   .form .form__additional-title {
     font-size: 36px;
@@ -2091,27 +2334,31 @@ body {
     margin-bottom: 57px;
   }
   .form .form__additional-wrapper {
-    width: 565px;
+    width: 89.9681528662%;
     display: grid;
     grid-template-columns: 221px 221px;
-    grid-template-rows: 40px 40px;
     row-gap: 32px;
     column-gap: 124px;
     font-size: 20px;
     line-height: 30px;
+    padding-left: 59px;
+  }
+  .form .checkbox {
+    width: 40px;
+    height: 40px;
+    top: -5px;
+    left: -59px;
   }
   .form .form__submit-button {
-    width: 565px;
+    width: 89.9681528662%;
     display: flex;
     flex-wrap: wrap;
   }
   .form .form__button {
-    min-width: 282px;
+    width: 49.9115044248%;
     min-height: 52px;
     font-size: 20px;
     line-height: 1;
-    text-align: center;
-    text-transform: uppercase;
     margin-right: 61px;
   }
   .form .form__note {
@@ -2121,11 +2368,10 @@ body {
 }
 @media (min-width: 1440px) {
   .form .form__characteristics {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 82px;
-    width: 569px;
+    row-gap: 20px;
+    width: 46.7159277504%;
+    min-height: 200px;
+    margin-bottom: 0;
   }
   .form .form__name-text {
     width: 50px;
@@ -2146,29 +2392,26 @@ body {
     width: 436px;
   }
   .form .form__goal {
-    padding: 0;
-    padding-top: 30px;
-    padding-left: 28px;
-    padding-bottom: 25px;
-    width: 568px;
-    margin-bottom: 69px;
-  }
-  .form .form__goal-wrapper {
-    align-items: center;
-    column-gap: 20px;
-    row-gap: 13px;
-    padding-bottom: 25px;
+    min-height: 200px;
+    width: 46.7159277504%;
+    margin-bottom: 0;
   }
   .form .form__contacts {
-    margin-bottom: 69px;
+    padding-top: 69px;
+  }
+  .form .form__contacts::before {
+    width: 70px;
+    left: -110px;
+    top: 93px;
+  }
+  .form .form__contacts::after {
+    width: 778px;
+    right: -110px;
+    top: 93px;
   }
   .form .form__contacts-content {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    font-size: 20px;
-    line-height: 30px;
-    text-transform: uppercase;
-    margin-bottom: 69px;
   }
   .form .form__email-text {
     justify-content: flex-start;
@@ -2187,18 +2430,40 @@ body {
   }
   .form .form__comments {
     padding: 0;
-    margin-bottom: 67px;
+    padding-top: 69px;
+  }
+  .form .form__comments::before {
+    width: 70px;
+    background-color: var(--green2);
+    left: -110px;
+    top: 93px;
+  }
+  .form .form__comments::after {
+    width: 1108px;
+    background-color: var(--green2);
+    right: -110px;
+    top: 93px;
   }
   .form .form__comments-title {
     margin-bottom: 76px;
-    text-transform: lowercase;
   }
   .form .form__comments-text {
     width: 100%;
     min-height: 174px;
   }
   .form .form__additional {
-    margin-bottom: 61px;
+    padding-top: 67px;
+    padding-bottom: 61px;
+  }
+  .form .form__additional::before {
+    width: 70px;
+    left: -110px;
+    top: 91px;
+  }
+  .form .form__additional::after {
+    width: 1078px;
+    right: -110px;
+    top: 91px;
   }
   .form .form__additional-title {
     margin-bottom: 57px;
@@ -2209,22 +2474,16 @@ body {
     grid-template-rows: 40px;
     row-gap: 32px;
     column-gap: 104px;
-    font-size: 20px;
-    line-height: 30px;
     margin-bottom: 0;
   }
   .form .form__submit-button {
-    width: 565px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
   }
   .form .form__button {
-    min-width: 282px;
     min-height: 52px;
-    font-size: 20px;
-    line-height: 1;
-    text-align: center;
-    text-transform: uppercase;
+    margin: 0;
     margin-right: 82px;
   }
   .form .form__note {
